--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@prisma/client": "^6.1.0",
-    "next": "15.1.3",
+    "bcryptjs": "^2.4.3",
+    "next": "^15.1.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.17.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
