--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,17 @@
-version: '3.8'
+version: "3"
 
 services:
   postgres:
-    image: postgres:15
+    image: postgres:latest
     container_name: postgres-db
-    restart: always
     environment:
-      POSTGRES_USER: project-matheus
+      POSTGRES_USER: project-apis-jwt
       POSTGRES_PASSWORD: secret
-      POSTGRES_DB: mydatabase
+      POSTGRES_DB: app
     ports:
       - "5432:5432"
     volumes:
-      - postgres-data:/var/lib/postgresql/data
-
-  redis:
-    image: redis:7
-    container_name: redis-cache
-    restart: always
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis-data:/data
+      - postgres_data:/var/lib/postgresql/data
 
 volumes:
-  postgres-data:
-    driver: local
-  redis-data:
-    driver: local
+  postgres_data:
